fix align

--- a/assets/css/rules.css
+++ b/assets/css/rules.css
@@ -82,11 +82,11 @@
 }
 
 .circle-table td {
-    width: 21.5%
+    width: 23.5%
 }
 
 .circle-table .first-column {
-    width: 17.5% !important;
+    width: 16.5% !important;
 }
 
 .points-table {
